# excalidraw-desktop

./: .env.desktop  .eslintignore  .gitignore  README.md  justfile  package.json
.github/workflows/: desktop-release.yml
desktop-app/: App.tsx  DesktopMainMenu.tsx  annotation-mode.ts  app-jotai.ts  app_constants.ts  claude-code-bridge.ts  dimension-utils.ts  index.html  index.tsx  package.json  tauri-bridge.ts  vite.config.mts
desktop-app/app-language/: LanguageList.tsx  language-detector.ts  language-state.ts
desktop-app/components/: AnnotationToolbar.tsx  DimensionOverlay.tsx  UITemplatesSidebar.tsx
desktop-app/data/: LocalData.ts  localStorage.ts
desktop-app/mcp-server/: package.json
desktop-app/mcp-server/src/: index.ts
desktop-app/mcp-server/src/helpers/: element.ts  file-format.ts
desktop-app/mcp-server/src/tools/: annotations.ts  create.ts  delete.ts  edit.ts  export.ts  modify.ts  open.ts  read.ts
desktop-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: database.rs  lib.rs  main.rs  mcp_http.rs
desktop-app/src-tauri/src/commands/: clipboard.rs  file_io.rs  mod.rs  recent_files.rs  screenshot.rs  session_state.rs  templates.rs
desktop-app/ui-templates/: index.ts
desktop-app/ui-templates/templates/: buttons.ts  cards.ts  inputs.ts  layouts.ts  modals.ts  navigation.ts
